--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="toggle-bar">
             <p>Annually</p>
             <div class="form-check form-switch">
-                <input class="form-check-input" type="checkbox" role="switch">
+                <input tabindex="1" class="form-check-input" type="checkbox" role="switch">
             </div>
             <p>Monthly</p>
         </div>
@@ -34,7 +34,7 @@
             <hr>
             <p class="limit">Send Up to 3 GB</p>
             <hr>
-            <button>LEARN MORE</button>
+            <button tabindex="2">LEARN MORE</button>
         </div>
 
         <div class="card center-card">
@@ -47,7 +47,7 @@
             <hr>
             <p class="limit">Send Up to 10 GB</p>
             <hr>
-            <button>LEARN MORE</button>
+            <button tabindex="3">LEARN MORE</button>
         </div>
 
         <div class="card">
@@ -60,7 +60,7 @@
             <hr>
             <p class="limit">Send Up to 20 GB</p>
             <hr>
-            <button>LEARN MORE</button>
+            <button tabindex="4">LEARN MORE</button>
         </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
